--- a/APP/CRUD-GENERATOR/gs-starter/src/app/gs-nav/base/base.component.html
+++ b/APP/CRUD-GENERATOR/gs-starter/src/app/gs-nav/base/base.component.html
@@ -25,6 +25,14 @@
         </a>
       </li>
 
+          
+      <li>
+        <a routerLink="parcelletests">
+          <i class="ti-blackboard"></i>
+          <p>Test de parcelle</p>
+        </a>
+      </li>
+
       <li>
           <a routerLink="users">
             <i class="ti-blackboard"></i>
