--- a/APP/CRUD-GENERATOR/gs-starter/src/app/gs-nav/base/base.component.html
+++ b/APP/CRUD-GENERATOR/gs-starter/src/app/gs-nav/base/base.component.html
@@ -1,4 +1,4 @@
-<div class="sidebar-wrapper">
+<div class="sidebar-wrapper  base">
   <div class="logo">
     <a class="simple-text">
       <div class="logo-img" style="width:100%">
@@ -8,45 +8,8 @@
     </a>
   </div>
   <ul class="nav">
-   <!-- <ng-content></ng-content>-->
-  
-      <li>
-        <a routerLink="especes">
-          <i class="ti-receipt"></i>
-          <p>Gestion des espèces</p>
-        </a>
-      </li>
-  
-      
-      <li>
-        <a routerLink="parcelles">
-          <i class="ti-blackboard"></i>
-          <p>Gestion des Plants</p>
-        </a>
-      </li>
 
-          
-      <li>
-        <a routerLink="parcelletests">
-          <i class="ti-blackboard"></i>
-          <p>Test de parcelle</p>
-        </a>
-      </li>
-
-      <li>
-          <a routerLink="users">
-            <i class="ti-blackboard"></i>
-            <p>Gestion des Utilisateurs</p>
-          </a>
-        </li>
-        <li>
-            <a routerLink="groups">
-              <i class="ti-blackboard"></i>
-              <p>Gestion des Groupes</p>
-            </a>
-          </li>
-
-  
+    <ng-content></ng-content>
 
 
   </ul>
