--- a/APP/CRUD-GENERATOR/gs-starter/src/app/nav/nav.component.html
+++ b/APP/CRUD-GENERATOR/gs-starter/src/app/nav/nav.component.html
@@ -1,32 +1,43 @@
-<base-nav title="GS-STARTER" orientation="top">
+<gs-nav title="GS-STARTER" orientation="top">
   <nav-item label="Accueil" target="home">
+
+  </nav-item>
+  <nav-item label="Espèces" target="especes">
+
+  </nav-item>
+
+  <nav-item label="Parcelles" target="parcelles">
+
+  </nav-item>
+
+
+  <nav-item label="Ressources humaines">
+  
+  <nav-item label="Utilisateur" target="users">
+
 
 
   </nav-item>
 
 
+  <nav-item label="Groupes" target="groups"></nav-item>
+
+</nav-item>
 
 
-
-
-
-
+<nav-item label="Ressources humaines">
   
-
+    <nav-item label="Utilisateur" target="users">
   
-      <nav-item label="Espèces" target="especes">
-
-      </nav-item>
-
-      <nav-item label="Parcelles" target="parcelles">
-
-      </nav-item>
-      
-
-      <nav-item label="Utilisateur" target="utilisateurs">
-
-        </nav-item>
+  
+  
+    </nav-item>
+  
+  
+    <nav-item label="Groupes" target="groups"></nav-item>
+  
+  </nav-item>
 
 
+</gs-nav>
 
-</base-nav>
