--- a/APP/CRUD-GENERATOR/gs-starter/src/app/user/user-edit/user-edit.component.html
+++ b/APP/CRUD-GENERATOR/gs-starter/src/app/user/user-edit/user-edit.component.html
@@ -1,4 +1,4 @@
-<ol class="breadcrumb ">
+<ol class="breadcrumb float-right">
   <li class="breadcrumb-item"><a routerLink="/">Accueil</a></li>
   <li class="breadcrumb-item active">
     Liste des utilisateurs
@@ -14,200 +14,160 @@
     <div *ngIf="feedback" class="alert alert-{{feedback.type}}">{{ feedback.message }}</div>
     <form *ngIf="user" #editForm="ngForm" (ngSubmit)="save()">
       
+
+      
+
+
+      
+            <div class="form-group">
+
+                <mat-form-field>
+
+                    
+          
+                    <input matInput class="form-control" placeholder="Id" name="Id"
+                    type="text"  [(ngModel)]="user._id">
+                     
+          </mat-form-field>
+          </div>
+            
+
+      
+
+
+      
+            <div class="form-group">
+
+                <mat-form-field>
+
+                    
+          
+                    <input matInput class="form-control" placeholder="nom" name="Name"
+                    type="text"  [(ngModel)]="user.name">
+                     
+          </mat-form-field>
+          </div>
+            
+
+      
+
+
+      
+            <div class="form-group">
+
+                <mat-form-field>
+
+                    
+          
+                    <input matInput class="form-control" placeholder="Adresse" name="Adresse"
+                    type="text"  [(ngModel)]="user.adresse">
+                     
+          </mat-form-field>
+          </div>
+            
+
+      
+
+
       <div class="form-group">
 
-        <label >
-          Id</label>
+         <mat-form-field>
+
+          <input matInput class="form-control" placeholder="Group" name="Group"
+            [matAutocomplete]="autoGroup" [formControl]="groupInput" (blur)="checkGroup()">
+
+        </mat-form-field>
+
+        <mat-autocomplete #autoGroup="matAutocomplete" [displayWith]="displayGroup"
+          (optionSelected)="groupClick($event)">
+            <mat-option *ngIf="isLoadingGroup" class="is-loading">
+            <mat-spinner diameter="50"></mat-spinner>
+          </mat-option>
+          <ng-container *ngIf="!isLoadingGroup">
+            <mat-option *ngFor="let group of filteredGroupList" [value]="group">
+              <span>{{
+                group.display}}</span>
+
+            </mat-option>
+          </ng-container>
+        </mat-autocomplete>
 
 
-        {{
-        user.
-        _id|| 'n/a'}}
-        
-        
 
-        
+
 
       </div>
 
 
-      
-      <div class="form-group">
 
 
 
-        
-
-
-
-
-
-
-        
-
-
-
-        <label for="
-          name"
-          >
-          nom</label>
-
-
-        
-        <input [(ngModel)]="user.name" id="name"
-          name="name" class="form-control">
-        
-
-        
-
-      </div>
 
 
       
-      <div class="form-group">
 
-
-
-        
-
-
-
-
-
-
-        
-
-
-
-        <label for="
-          adresse"
-          >
-          Adresse</label>
-
-
-        
-        <input [(ngModel)]="user.adresse" id="adresse"
-          name="adresse" class="form-control">
-        
-
-        
-
-      </div>
+      
 
 
       
-      <div class="form-group">
 
 
 
-        
+      
 
 
-        
+            
+              <div class="form-group">
+            <mat-form-field>
+                <mat-label>Sexe</mat-label>
+                <mat-select [(value)]="sexe">
+                  
+                  <mat-option value=M> Masculin</mat-option>
+                  
+                  <mat-option value=F> Féminin</mat-option>
+                   
+                  
+                </mat-select>
+              </mat-form-field>
 
-        
-        
-
-        <label>
-          Sexe</label>
+            </div>
+            
            
-        <mat-radio-group [(ngModel)]="user.sexe" name="sexe" >
-<div fxLayout="column" fxLayout.xs="column" fxLayoutGap="25" >
-          
-
-            <div>
-          <mat-radio-button value=M  fxFlex>
-            Masculin
-          </mat-radio-button>
-        </div>
-          
-
-            <div>
-          <mat-radio-button value=F  fxFlex>
-            Féminin
-          </mat-radio-button>
-        </div>
-          
-        </div>
-        </mat-radio-group>
-
-
-        
-        
-
-      </div>
-
-
-      
-      <div class="form-group">
-
-
-
-        
-
-
-
-
-
-
-        
-
-
-
-        <label for="
-          date_naissance"
-          >
-          Date de naissance</label>
-
-
-        
-        <input type="date" [(ngModel)]="user.date_naissance"
-          id="date_naissance" name="date_naissance" class="form-control">
-        
-
-        
-
-      </div>
-
-
-      
-      <div class="form-group">
-
-
-
-        
-
-
-
-
-
-
-        
-
-
-
-        <label for="
-          niveau"
-          >
-          Niveau </label>
-
-
-        
-        <input [(ngModel)]="user.niveau" id="niveau"
-          name="niveau" class="form-control">
-        
-
-        
-
-      </div>
-
 
       
 
-      <button type="submit" class="btn btn-primary" [disabled]="!editForm.form.valid">Enregistrer</button>
-      <button type="button" class="btn btn-secondary" (click)="cancel()">Annuler</button>
+
+      
+            <div class="form-group">
+
+                <mat-form-field>
+                 <input matInput [matDatepicker]="datepicker" placeholder="Date de naissance" [(ngModel)]="user.date_naissance" name="DateNaissance"  required   >
+                    <mat-datepicker-toggle matSuffix [for]="datepicker"></mat-datepicker-toggle>
+                    <mat-datepicker touchUi="true" #datepicker></mat-datepicker>
+                    
+                    
+          </mat-form-field>
+          </div>
+            
+
+      
+
+
+      
+            <div class="form-group">
+
+                <mat-form-field>
+
+                    
+          
+                    <input matInput class="form-control" placeholder="Niveau " name="Niveau"
+                    type="text"  [(ngModel)]="user.niveau">
+                     
+          </mat-form-field>
+          </div>
+            
+            <button type="submit" class="btn btn-primary" [disabled]="!editForm.form.valid">Enregistrer</button>
+            <button type="button" class="btn btn-secondary" (click)="cancel()">Annuler</button>
     </form>
   </div>
 </div>
-
-<user-TO-group  *ngIf="user" [user]="user"></user-TO-group>
