--- a/APP/CRUD-GENERATOR/gs-starter/src/app/user/user-list/user-list.component.html
+++ b/APP/CRUD-GENERATOR/gs-starter/src/app/user/user-list/user-list.component.html
@@ -1,10 +1,10 @@
-<ol class="breadcrumb">
+<ol class="breadcrumb float-right">
   <li class="breadcrumb-item"><a routerLink="/">Home</a></li>
   <li class="breadcrumb-item active">Liste des utilisateurs</li>
 </ol>
 <div class="card">
   <div class="header">
-    <h2 class="title">Liste des utilisateurs</h2>
+    <h2 class="title">Liste des utilisateurs </h2>
   </div>
   <div class="content">
     <form #f="ngForm">
@@ -19,39 +19,22 @@
   <div class="table-responsive">
     <table class="table table-centered table-hover mb-0" id="datatable">
       <thead>
-        <tr>
-          <th class="border-top-0" scope="col">Id</th>
-          <th class="border-top-0" scope="col">nom</th>
-          <th class="border-top-0" scope="col">Adresse</th>
-          <th class="border-top-0" scope="col">Sexe</th>
-          <th class="border-top-0" scope="col">Date de naissance</th>
-          <th class="border-top-0" scope="col">Niveau </th>
+        <tr><th class="border-top-0" scope="col">Id</th><th class="border-top-0" scope="col">nom</th><th class="border-top-0" scope="col">Adresse</th><th class="border-top-0" scope="col">Groupe par défaut</th><th class="border-top-0" scope="col">Sexe</th><th class="border-top-0" scope="col">Date de naissance</th><th class="border-top-0" scope="col">Niveau </th>
           <th class="border-top-0" scope="col" style="width:120px"></th>
         </tr>
       </thead>
       <tbody>
         <tr *ngFor="let item of userList" [class.active]="item === selectedUser">
         
-          <td>
-             
-            {{item._id}}</td>
-          <td>
-             
-            {{item.name}}</td>
-          <td>
-             
-            {{item.adresse}}</td>
-          <td>
-             
-            {{item.sexe}}</td>
-          <td>
-             
-            {{item.date_naissance}}</td>
-          <td>
-             
-            {{item.niveau}}</td>
+          <td>{{item._id}}</td>
+          <td>{{item.name}}</td>
+          <td>{{item.adresse}}</td>
+          <td>{{item.group}}</td>
+          <td>{{item.sexe}}</td>
+          <td>{{item.date_naissance}}</td>
+          <td>{{item.niveau}}</td>
           <td style="white-space: nowrap">
-            <a [routerLink]="['../users', item._id]" class="btn btn-secondary">Modifier</a>&nbsp;
+            <a [routerLink]="['../users', item._id ]" class="btn btn-secondary">Modifier</a>&nbsp;
             <button (click)="delete(item)" class="btn btn-danger">Supprimer</button>
           </td>
         </tr>
