--- a/APP/CRUD-GENERATOR/gs-starter/src/app/nav/nav.component.html
+++ b/APP/CRUD-GENERATOR/gs-starter/src/app/nav/nav.component.html
@@ -11,7 +11,7 @@
   </nav-item>
 
 
-  <nav-item label="Ressources humaines">
+  <nav-item label="Ressources humaines" icon="ti-user">
   
   <nav-item label="Utilisateur" target="users">
 
@@ -25,18 +25,6 @@
 </nav-item>
 
 
-<nav-item label="Ressources humaines">
-  
-    <nav-item label="Utilisateur" target="users">
-  
-  
-  
-    </nav-item>
-  
-  
-    <nav-item label="Groupes" target="groups"></nav-item>
-  
-  </nav-item>
 
 
 </gs-nav>
