--- a/APP/CRUD-GENERATOR/gs-starter/src/assets/css/paper-dashboard.css
+++ b/APP/CRUD-GENERATOR/gs-starter/src/assets/css/paper-dashboard.css
@@ -685,10 +685,10 @@ hr {
 
 .btn,
 .navbar .navbar-nav > li > a.btn {
-  border-radius: 20px;
+  border-radius: 8px;
   box-sizing: border-box;
   border-width: 2px;
-  background-color: transparent;
+  background: transparent;
   font-size: 14px;
   font-weight: 500;
   padding: 7px 18px;
@@ -1230,8 +1230,15 @@ hr {
   filter: alpha(opacity=100);
 }
 
+
+.gs-mat-field input {
+
+  background-color: #fffcf5;
+}
+
 .form-control {
   background-color: #fffcf5;
+  
   border: medium none;
   border-radius: 4px;
   color: #66615b;
