--- a/APP/CRUD-GENERATOR/gs-starter/src/app/gs-nav/base/base.component.html
+++ b/APP/CRUD-GENERATOR/gs-starter/src/app/gs-nav/base/base.component.html
@@ -2,7 +2,7 @@
   <div class="logo">
     <a class="simple-text">
       <div class="logo-img" style="width:100%">
-        <h3>GS-STARTER</h3>
+        <h3>GS STARTER</h3>
       </div>
 
     </a>
@@ -13,4 +13,5 @@
 
 
   </ul>
+
 </div>
