--- a/APP/CRUD-GENERATOR/gs-starter/src/app/nav/nav.component.html
+++ b/APP/CRUD-GENERATOR/gs-starter/src/app/nav/nav.component.html
@@ -12,8 +12,8 @@
 
 
   <nav-item label="Ressources humaines" icon="ti-user">
-  
-  <nav-item label="Utilisateur" target="users">
+
+  <nav-item label="Utilisateur" target="rh/users">
 
 
 
