--- a/APP/CRUD-GENERATOR/gs-starter/src/app/user-group/groupTOuser/groupTOuser.component.html
+++ b/APP/CRUD-GENERATOR/gs-starter/src/app/user-group/groupTOuser/groupTOuser.component.html
@@ -14,7 +14,7 @@
               </div>  
 
               <div flFlex="20">
-                <button mat-button (click)="actionQuit(user_group)">QUITTER</button>
+                <button mat-button  class="btn btn-danger"   (click)="actionQuit(user_group)">QUITTER</button>
               </div>
           
       
