--- a/APP/CRUD-GENERATOR/gs-starter/src/app/user/user-edit/user-edit.component.html
+++ b/APP/CRUD-GENERATOR/gs-starter/src/app/user/user-edit/user-edit.component.html
@@ -7,77 +7,53 @@
 <div class="card">
   <div class="header">
     <h2 class="title">
-      Liste des utilisateurs
+        <span *ngIf="!user._id">Création d'un user</span>
+        <span *ngIf="user._id">user</span>
     </h2>
   </div>
   <div class="content">
     <div *ngIf="feedback" class="alert alert-{{feedback.type}}">{{ feedback.message }}</div>
     <form *ngIf="user" #editForm="ngForm" (ngSubmit)="save()">
       
-
       
-
-
       
             <div class="form-group">
-
                 <mat-form-field class="gs-mat-field" fxFlex="100">
-
                     
-          
-                    <input matInput class="form-control" placeholder="Id" name="Id"
+                  <input matInput class="form-control" placeholder="Id" name="Id"
                     type="text"  [(ngModel)]="user._id">
                      
           </mat-form-field>
           </div>
             
-
       
-
-
       
             <div class="form-group">
-
                 <mat-form-field class="gs-mat-field" fxFlex="100">
-
                     
-          
-                    <input matInput class="form-control" placeholder="nom" name="Name"
+                  <input matInput class="form-control" placeholder="nom" name="Name"
                     type="text"  [(ngModel)]="user.name">
                      
           </mat-form-field>
           </div>
             
-
       
-
-
       
             <div class="form-group">
-
                 <mat-form-field class="gs-mat-field" fxFlex="100">
-
                     
-          
-                    <input matInput class="form-control" placeholder="Adresse" name="Adresse"
+                  <input matInput class="form-control" placeholder="Adresse" name="Adresse"
                     type="text"  [(ngModel)]="user.adresse">
                      
           </mat-form-field>
           </div>
             
-
       
-
-
       <div class="form-group">
-
          <mat-form-field  class="gs-mat-field" fxFlex="100">
-
           <input matInput class="form-control" placeholder="Group" name="Group"
             [matAutocomplete]="autoGroup" [formControl]="groupInput" (blur)="checkGroup()">
-
         </mat-form-field>
-
         <mat-autocomplete #autoGroup="matAutocomplete" [displayWith]="displayGroup"
           (optionSelected)="groupClick($event)">
             <mat-option *ngIf="isLoadingGroup" class="is-loading">
@@ -87,35 +63,14 @@
             <mat-option *ngFor="let group of filteredGroupList" [value]="group">
               <span>{{
                 group.display}}</span>
-
             </mat-option>
           </ng-container>
         </mat-autocomplete>
-
-
-
-
-
-      </div>
-
-
-
-
-
-
-
+ </div>
       
-
       
-
-
       
-
-
-
       
-
-
             
               <div class="form-group">
             <mat-form-field class="gs-mat-field" fxFlex="100">
@@ -129,41 +84,26 @@
                   
                 </mat-select>
               </mat-form-field>
-
             </div>
-            
            
-
       
-
-
       
             <div class="form-group">
-
                 <mat-form-field class="gs-mat-field" fxFlex="100">
-
                     
-          
                     <input matInput [matDatepicker]="datepicker" placeholder="Date de naissance" [(ngModel)]="user.date_naissance" name="DateNaissance"                                           required   >
                     <mat-datepicker-toggle matSuffix [for]="datepicker"></mat-datepicker-toggle>
                     <mat-datepicker touchUi="true" #datepicker></mat-datepicker>
                     
-                    
           </mat-form-field>
           </div>
             
-
       
-
-
       
             <div class="form-group">
-
                 <mat-form-field class="gs-mat-field" fxFlex="100">
-
                     
-          
-                    <input matInput class="form-control" placeholder="Niveau " name="Niveau"
+                  <input matInput class="form-control" placeholder="Niveau " name="Niveau"
                     type="text"  [(ngModel)]="user.niveau">
                      
           </mat-form-field>
@@ -173,4 +113,5 @@
             <button type="button" class="btn btn-secondary" (click)="cancel()">Annuler</button>
     </form>
   </div>
+  <user-TO-group *ngIf="user._id" [user]="user"></user-TO-group>
 </div>
