--- a/APP/CRUD-GENERATOR/gs-starter/src/app/user/user-list/user-list.component.html
+++ b/APP/CRUD-GENERATOR/gs-starter/src/app/user/user-list/user-list.component.html
@@ -8,12 +8,13 @@
   </div>
   <div class="content">
     <form #f="ngForm">
-      
+
       <button (click)="search()" [disabled]="!f?.valid" class="btn btn-primary">Rechercher</button>
       <a [routerLink]="['../users', 'new' ]" class="btn btn-default">Nouveau</a>
     </form>
   </div>
 </div>
+<!--
 <div class="card" *ngIf="userList.length > 0">
   <div *ngIf="feedback" class="alert alert-{{feedback.type}}">{{ feedback.message }}</div>
   <div class="table-responsive">
@@ -25,7 +26,7 @@
       </thead>
       <tbody>
         <tr *ngFor="let item of userList" [class.active]="item === selectedUser">
-        
+
           <td>{{item._id}}</td>
           <td>{{item.name}}</td>
           <td>{{item.adresse}}</td>
@@ -42,3 +43,57 @@
     </table>
   </div>
 </div>
+-->
+
+<div   *ngIf="userList.length > 0"  class=" table-responsive example-container mat-elevation-z8">
+
+  <mat-table class="bg-primary"  [dataSource]="userList">
+
+    <ng-container matColumnDef="id">
+      <mat-header-cell *matHeaderCellDef>ID</mat-header-cell>
+      <mat-cell *matCellDef="let user">{{user._id}}</mat-cell>
+    </ng-container>
+them
+    <ng-container matColumnDef="name">
+      <mat-header-cell *matHeaderCellDef>Nom</mat-header-cell>
+      <mat-cell class="description-cell"
+                *matCellDef="let user">{{user.name}}</mat-cell>
+
+    </ng-container>
+
+
+    <ng-container matColumnDef="adresse">
+      <mat-header-cell *matHeaderCellDef>Adresse</mat-header-cell>
+      <mat-cell class="duration-cell"
+                *matCellDef="let user">{{user.adresse}}</mat-cell>
+    </ng-container>
+
+
+    <ng-container matColumnDef="sexe">
+      <mat-header-cell *matHeaderCellDef>Sexe</mat-header-cell>
+      <mat-cell class="duration-cell"
+                *matCellDef="let user">{{user.sexe}}</mat-cell>
+    </ng-container>
+
+    <ng-container matColumnDef="actions">
+      <mat-header-cell *matHeaderCellDef></mat-header-cell>
+      <mat-cell class="duration-cell"
+                *matCellDef="let user">
+
+
+        <a [routerLink]="['../users', user._id ]" class="btn btn-secondary">Modifier</a>&nbsp;
+        <button (click)="delete(user)" class="btn btn-danger">Supprimer</button>
+
+
+      </mat-cell>
+    </ng-container>
+
+
+    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+
+    <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
+
+  </mat-table>
+
+</div>
+
