--- a/APP/CRUD-GENERATOR/gs-starter/src/styles.scss
+++ b/APP/CRUD-GENERATOR/gs-starter/src/styles.scss
@@ -2,7 +2,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import "../node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css";
 
-
+@import "assets/css/tables.scss";
 
 .white-transparent {
 background: rgba(255,255,255,0.1);
@@ -20,3 +20,6 @@ background: rgba(255,255,255,0.1);
         background: rgba(0,0,0,0.2);
 
     }
+
+
+
