--- a/APP/CRUD-GENERATOR/gs-starter/src/app/nav/nav.component.html
+++ b/APP/CRUD-GENERATOR/gs-starter/src/app/nav/nav.component.html
@@ -20,7 +20,7 @@
   </nav-item>
 
 
-  <nav-item label="Groupes" target="groups"></nav-item>
+  <nav-item label="Groupes" target="rh/groups"></nav-item>
 
 </nav-item>
 
