--- a/APP/CRUD-GENERATOR/gs-starter/src/app/rh/user/user-list/user-list.component.html
+++ b/APP/CRUD-GENERATOR/gs-starter/src/app/rh/user/user-list/user-list.component.html
@@ -1,3 +1,4 @@
+
 <ol class="breadcrumb float-right">
   <li class="breadcrumb-item"><a routerLink="/">Home</a></li>
   <li class="breadcrumb-item active">Liste des utilisateurs</li>
@@ -7,27 +8,95 @@
     <h2 class="title">Liste des utilisateurs </h2>
   </div>
   <div class="content">
-    <form #f="ngForm">
+    <button (click)="search()" [disabled]="!f?.valid" class="btn btn-primary">Rechercher</button>
+    <a [routerLink]="['../users', 'new' ]" class="btn btn-default">Nouveau</a>
+    <hr>
+    <mat-card class="white-transparent" >
+<mat-card-header  class="bg-transparent">
+        <p class="lead strong">
+        Filtres de recherches
+        </p>
+        <hr>
+      </mat-card-header>
+<mat-card-content class="bg-transparent" fxLayout="row" fxLayoutGap="18px" fxLayoutAlign="flex-start" fxLayout.xs="column" fxLayoutAlign.xs="flex-start"  fxLayout="row">
       
+        <mat-card  class="white-transparent">
+        <mat-card-header class="white-transparent" fxLayout="row" fxLayoutAlign="space-between">
+            <p class="bold">nom</p>
+            <button class="btn " (click)="nameFilter.reset()" >reset </button>
+        </mat-card-header>
+      <mat-card-content class="white-transparent" fxLayout="row" fxLayoutAlign="space-between">
+    
 
 
 
-      <button (click)="search()" [disabled]="!f?.valid" class="btn btn-primary">Rechercher</button>
-      <a [routerLink]="['../users', 'new' ]" class="btn btn-default">Nouveau</a>
-    </form>
+
+<mat-form-field>
+        <input matInput class="" placeholder="val" name="name.val" [formControl]="nameFilter.controls.val" >
+        </mat-form-field>
+
+      </mat-card-content></mat-card>
+      
+        <mat-card  class="white-transparent">
+        <mat-card-header class="white-transparent" fxLayout="row" fxLayoutAlign="space-between">
+            <p class="bold">Sexe</p>
+            <button class="btn " (click)="sexeFilter.reset()" >reset </button>
+        </mat-card-header>
+      <mat-card-content class="white-transparent" fxLayout="row" fxLayoutAlign="space-between">
+    
+
+
+          
+
+<mat-form-field class="gs-mat-field" fxFlex="100">
+          <mat-label>Sexe</mat-label>
+          <mat-select  [formControl]="sexeFilter.controls.val">
+            
+            <mat-option value=M> Masculin</mat-option>
+            
+            <mat-option value=F> Féminin</mat-option>
+            
+          </mat-select>
+        </mat-form-field>
+
+
+
+
+      </mat-card-content></mat-card>
+      
+        <mat-card  class="white-transparent">
+        <mat-card-header class="white-transparent" fxLayout="row" fxLayoutAlign="space-between">
+            <p class="bold">Date de naissance</p>
+            <button class="btn " (click)="date_naissanceFilter.reset()" >reset </button>
+        </mat-card-header>
+      <mat-card-content class="white-transparent" fxLayout="row" fxLayoutAlign="space-between">
+    
+        <mat-form-field fxFlex="30">
+          <input matInput [matDatepicker]="dpdate_naissanceMin" placeholder="latest" [formControl]="date_naissanceFilter.controls.min" name="DateNaissance" >
+          <mat-datepicker-toggle matSuffix [for]="dpdate_naissanceMin"></mat-datepicker-toggle>
+          <mat-datepicker touchUi="true" #dpdate_naissanceMin></mat-datepicker>
+        </mat-form-field>
+        <mat-form-field fxFlex="30">
+          <input matInput [matDatepicker]="dpdate_naissanceVal" placeholder="val" [formControl]="date_naissanceFilter.controls.val" name="DateNaissance" >
+<mat-datepicker-toggle matSuffix [for]="dpdate_naissanceVal"></mat-datepicker-toggle>
+          <mat-datepicker touchUi="true" #dpdate_naissanceVal></mat-datepicker>
+        </mat-form-field>
+<mat-form-field fxFlex="30">
+          <input matInput [matDatepicker]="dpdate_naissanceMax" placeholder="latest" [formControl]="date_naissanceFilter.controls.max" name="DateNaissance" >
+<mat-datepicker-toggle matSuffix [for]="dpdate_naissanceMax"></mat-datepicker-toggle>
+          <mat-datepicker touchUi="true" #dpdate_naissanceMax></mat-datepicker>
+</mat-form-field>
+
+
+
+
+
+      </mat-card-content></mat-card>
+      
+      </mat-card-content>
+</mat-card>
   </div>
-
-  <mat-card>
-    <mat-form-field>
-      <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filtre">
-    </mat-form-field>
-  </mat-card>
-
 </div>
-
-
-
-
 <div  *ngIf="userList.length > 0"  class="example-container mat-elevation-z8">
   
 <mat-table class=""  [dataSource]="dataSource" matSort >
@@ -36,8 +105,7 @@
       <mat-header-cell *matHeaderCellDef mat-sort-header >Id</mat-header-cell>
       <mat-cell *matCellDef="let item" class="mobile-hide">
          <span class="mobile-label">Id : </span>
-
-        {{item._id}}
+{{item._id}}
       </mat-cell>
     </ng-container>
   
@@ -45,8 +113,7 @@
       <mat-header-cell *matHeaderCellDef mat-sort-header >nom</mat-header-cell>
       <mat-cell *matCellDef="let item" class="mobile-hide">
          <span class="mobile-label">nom : </span>
-
-        {{item.name}}
+{{item.name}}
       </mat-cell>
     </ng-container>
   
@@ -54,8 +121,7 @@
       <mat-header-cell *matHeaderCellDef mat-sort-header >Groupe préféré</mat-header-cell>
       <mat-cell *matCellDef="let item" class="mobile-hide">
          <span class="mobile-label">Groupe préféré : </span>
-
-        {{item.group}}
+{{item.group}}
       </mat-cell>
     </ng-container>
   
@@ -63,8 +129,7 @@
       <mat-header-cell *matHeaderCellDef mat-sort-header >Sexe</mat-header-cell>
       <mat-cell *matCellDef="let item" class="mobile-hide">
          <span class="mobile-label">Sexe : </span>
-
-        {{item.sexe}}
+{{item.sexe}}
       </mat-cell>
     </ng-container>
   
@@ -72,8 +137,7 @@
       <mat-header-cell *matHeaderCellDef mat-sort-header >Date de naissance</mat-header-cell>
       <mat-cell *matCellDef="let item" class="mobile-hide">
          <span class="mobile-label">Date de naissance : </span>
-
-        {{item.date_naissance}}
+{{item.date_naissance}}
       </mat-cell>
     </ng-container>
   
@@ -81,31 +145,22 @@
       <mat-header-cell *matHeaderCellDef mat-sort-header >Niveau </mat-header-cell>
       <mat-cell *matCellDef="let item" class="mobile-hide">
          <span class="mobile-label">Niveau  : </span>
-
-        {{item.niveau}}
+{{item.niveau}}
       </mat-cell>
     </ng-container>
   
-
-  <ng-container matColumnDef="actions">
+<ng-container matColumnDef="actions">
     <mat-header-cell *matHeaderCellDef></mat-header-cell>
     <mat-cell class=""
               *matCellDef="let item">
-
-      <div fxLayout="row" fxLayout.md="column" fxLayoutAlign="center">
+<div fxLayout="row" fxLayout.md="column" fxLayoutAlign="center">
       <a [routerLink]="['../users', item._id ]" class="btn btn-secondary">Détails</a>&nbsp;
       <button (click)="delete(item)" class="btn btn-danger">Supprimer</button>
       </div>
-
-    </mat-cell>
+</mat-cell>
   </ng-container>
-
-  <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-
-    <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
-
-  </mat-table>
-
-  <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
-
+<mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+<mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
+</mat-table>
+<mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
 </div>
